--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+= 0.4.x
+
+  * Updated Heroku configuration [Glenn Roberts]
+
+
 = 0.4.1 / 2010-04-02
 
  * The caching stuff introduced 0.3.0 have been reverted
